--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,1 +1,40 @@
-<p>progress works!</p>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+
+                <h4 class="card-title">Barra de progreso</h4>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar" [attr.ariaValuenow]="porcentaje1" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" [style.width]="porcentaje1 + '%'"></div>
+                </div>
+                <br>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" [attr.ariaValuenow]="porcentaje1" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" [style.width]="porcentaje2 + '%'"></div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="row">
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <!-- cuando se envia una cadena al input: leyenda="Progress Azul" -->
+                <!-- cuando se envia una numero al input: [porcentaje]="35"" -->
+                <app-incrementador (actualizaValor)="this.porcentaje1 = $event" titulo="Progress Azul" [porcentaje]="porcentaje1"></app-incrementador>
+                <!--  modo 1: (actualizaValor)="this.porcentaje1 = $event" -->
+            </div>
+        </div>
+    </div>
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <app-incrementador (actualizaValor)="actualiza( $event )" titulo="Progress Verde" [porcentaje]="porcentaje2"></app-incrementador>
+                <!-- modo 2: (actualizaValor)="actualiza( $event )" -->
+            </div>
+        </div>
+    </div>
+</div>
