--- a/src/app/pages/modal-upload/modal-upload.component.html
+++ b/src/app/pages/modal-upload/modal-upload.component.html
@@ -4,13 +4,13 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Modal title</h5>
+                    <h5 class="modal-title">Subir Imagen</h5>
                     <button (click)="cerrarModal()" type="button" class="close" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                 </div>
                 <div class="modal-body text-center">
-                    <p>Modal body text goes here.</p>
+                    <!-- <p>Modal body text goes here.</p> -->
 
                     <img *ngIf="!imagenTemp" [src]="xxx | imagen" class="w150">
                     <img *ngIf="imagenTemp" [src]="imagenTemp" class="w150">
