--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
     <!-- Sidebar scroll-->
     <div class="scroll-sidebar">
         <!-- Sidebar navigation-->
-        <nav class="sidebar-nav">
+        <nav class="sidebar-nav" *ngIf="menus">
             <ul id="sidebarnav">
                 <li class="user-profile">
                     <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><img [src]=" usuario.img | imagen" alt="user" /><span class="hide-menu">{{ usuario.nombre }} </span></a>
@@ -19,7 +19,7 @@
                 <li class="nav-devider"></li>
 
                 <li class="nav-small-cap">PERSONAL</li>
-                <li *ngFor="let menu of _sidebarServ.menu"> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i [class]="menu.icono"></i><span class="hide-menu">{{ menu.titulo }} <span class="label label-rouded label-themecolor pull-right">{{ menu.submenu.length }}</span></span></a>
+                <li *ngFor="let menu of menus"> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i [class]="menu.icono"></i><span class="hide-menu">{{ menu.titulo }} <span class="label label-rouded label-themecolor pull-right">{{ menu.submenu.length }}</span></span></a>
                     <ul *ngFor="let submenu of menu.submenu" aria-expanded="false" class="collapse">
                         <li><a routerLinkActive="active" [routerLink]="[submenu.url]">{{ submenu.titulo }} </a></li>
                         <!-- <li><a href="index2.html">Analytical</a></li>
